@@ -6,6 +6,7 @@ with respect to new features and compatibility changes.
 
 2018-07-14
  * Added wing.scroll_to() in wing.vue.js.
+ * Added wing.get_cookie() in wing.vue.js.
 
 2018-07-11
  * wing.vue.js throws errors when apis are empty.
